# eddie

./: .env.example  .gitignore  CONTEXT_FIXES_README.md  DATABASE_INTEGRATION.md  ISSUE_RESOLUTION_SUMMARY.md  LANGCHAIN_COMPRESSION_COMPARISON.md  README.md  README_DATABASE_SETUP.md  database_schema.sql  db_tools.py  main.py  product_search_agent.py  product_search_agent_v2.py  pyproject.toml  search_tools.py  setup_database.py  test_context_fixes.py  test_db_integration.py  test_langchain_compression.py  translation_layer_pattern.md
config/: database_config.json  guitar_registry_prompt.md
doc/: context.md
models/: product_models.py
