[project]
name = "eddie"
version = "0.1.0"
description = "A guitar registry research agent"
authors = [
    {name = "Mariano Rozanski", email = "mariano@rozanski.com"},
]
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "langchain-tavily",
    "playwright",
    "python-dotenv",
    "pydantic",
    "tiktoken",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eddie"]
